--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.0",
     "html2canvas": "^1.4.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "vanilla-tilt": "^1.8.1",
     "zone.js": "~0.15.0"
